--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
     width: 100%;
-    background-color: #282c34;
+    background-color: rgb(138, 145, 213);
     min-height: 40vh;
     display: flex;
     flex-direction: column;
@@ -23,6 +23,22 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
+}
+
+.bodyContent {
+    padding: 15px;
+}
+
+.redRect {
+    background-color: rgb(233, 105, 105);
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+}
+
+.buttonRow {
+    padding: 15px;
+    background-color: #b6bdff;
 }
 
 .App-link {
